# framestack

./: .gitignore  BUILD_AND_DISTRIBUTION.md  CODEC_LICENSES.md  INSTALL_INSTRUCTIONS.md  LICENSE  MACOS_DISTRIBUTION.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: AUDIT.md
resources/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  sequence.rs  store.rs  types.rs  zip_extract.rs
src/main/: ffmpeg.ts  index.ts  store.ts
src/preload/: index.ts
src/renderer/: App.tsx  api.ts  index.css  index.html  main.tsx  types.d.ts
src/renderer/components/: AboutModal.tsx  DirectoryBrowser.tsx  FFmpegMissingBanner.tsx  FilePicker.tsx  FormatSelector.tsx  JobHistory.tsx  JobProgress.tsx  OutputSettings.tsx
src/renderer/hooks/: useFFmpeg.ts  useJobHistory.ts
src/renderer/utils/: naming.ts  path.ts
src/shared/: formats.ts  types.ts
