[package]
name = "framestack"
version = "1.0.3"
description = "Image sequence to video renderer with FFmpeg"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "fs"] }
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
once_cell = "1"
log = "0.4"
libc = "0.2"
rfd = "0.15"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
